--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 * {
   margin: 0;
   padding: 0;
-  font-family: Ubuntu, 'SF Pro Display','Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Segoe UI', 'Microsoft Yahei', sans-serif;
+  font-family: 'Ubuntu', 'SF Pro Display','Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Segoe UI', 'Microsoft Yahei', sans-serif;
 }
 html {
   scroll-behavior: smooth;
 }
 :root {
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.2;
   font-weight: 400;
   /* color-scheme: light dark; */
   background-color: #1F2029;
@@ -94,6 +95,10 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+li {
+  list-style: none;
 }
 
 .btn {
